# Agentic-RAG-App

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  api.py  docker-entrypoint.sh  patient_mapper.py  pyproject.toml  telegram_bot.py
agents/: helper.py  main.py
docs/: ARCHITECTURE.md  README.md  WORKFLOW.md
rag/: ingest.py  vector_store.py
rag/api/: __init__.py  dependencies.py  error_handlers.py  models.py  utils.py
rag/api/routes/: qa.py
rag/core/: __init__.py
src/: main.py
src/agents/: __init__.py  ai_agents.py  diagnoser.py  experiment.py  general_doctor.py  medical_assistant.py  medical_assitant.py  native_language.py  safety_agent.py  translator.py  triage_nurse.py
src/agents/instructions/: ai_agent.txt  diagnoser.txt  general_doctor.txt  medical_assistant.txt  native_language.txt  safety_agent.txt  translator.txt  triage_agent.txt  triage_nurse.txt
src/guadrails/: __init__.py  input_validation.py
src/models/: __init__.py  model.py
src/rag/: api.py  app.py  ingest.py  vector_store.py
src/rag/api/: __init__.py  dependencies.py  models.py
src/rag/api/routes/: __init__.py  qa.py
src/rag/core/: __init__.py  services.py
