[project]
name = "assessment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.2",
    "chromadb>=1.2.2",
    "fastapi>=0.120.1",
    "googletrans>=4.0.2",
    "openai-agents>=0.4.2",
    "pydub>=0.25.1",
    "pypdf>=6.1.3",
    "python-pptx>=1.0.2",
    "python-telegram-bot>=22.5",
]
